--- a/index.html
+++ b/index.html
@@ -1,99 +1,105 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>РубльБанк</title>
+  <title>РубльБанк</title>
 
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
 
 
-<header class="main-header">
-  <div class="container">
-    <section class="main-header__top-nav">
+  <header class="main-header">
+    <div class="container">
+      <section class="main-header__top-nav">
 
-      <div class="main-header__logo">
-        <span>Рубльбанк</span>
-      </div>
+        <div class="main-header__logo">
+          <a href="index.html">Рубльбанк</a>
+        </div>
 
-      <nav class="secondary-nav main-header__secondary-nav">
-        <ul class="secondary-nav__list secondary-nav__list--left">
-          <li class="secondary-nav__item">
-            <a href="#" class="secondary-nav__link">
-              Частным клиентам
-            </a>
-          </li>
-          <li class="secondary-nav__item">
-            <a href="#" class="secondary-nav__link">
-              Бизнесу
-            </a>
-          </li>
-          <li class="secondary-nav__item">
-            <a href="#" class="secondary-nav__link">
-              Самозанятым
-            </a>
-          </li>
-        </ul>
+        <nav class="secondary-nav main-header__secondary-nav">
+          <ul class="secondary-nav__list secondary-nav__list--left">
+            <li class="secondary-nav__item">
+              <a href="#" class="secondary-nav__link">
+                Частным клиентам
+              </a>
+            </li>
+            <li class="secondary-nav__item">
+              <a href="#" class="secondary-nav__link">
+                Бизнесу
+              </a>
+            </li>
+            <li class="secondary-nav__item">
+              <a href="#" class="secondary-nav__link">
+                Самозанятым
+              </a>
+            </li>
+          </ul>
 
-        <ul class="secondary-nav__list secondary-nav__list--right">
-          <li class="secondary-nav__item">
-            <a href="#" class="secondary-nav__link">
-              Отделения и банкоматы
-            </a>
-          </li>
-          <li class="secondary-nav__item">
-            <a href="#" class="secondary-nav__link">
-              Рубльбанк онлайн
-            </a>
-          </li>
-        </ul>
+          <ul class="secondary-nav__list secondary-nav__list--right">
+            <li class="secondary-nav__item">
+              <a href="#" class="secondary-nav__link">
+                Отделения и банкоматы
+              </a>
+            </li>
+            <li class="secondary-nav__item">
+              <a href="#" class="secondary-nav__link rublebank-link">
+                Рубльбанк онлайн
+              </a>
+            </li>
+          </ul>
 
-      </nav>
+        </nav>
 
-    </section>
-
+      </section>
+    </div>
     <nav class="main-nav main-header__nav">
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Ипотека</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Кредиты</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Вклады</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Карты</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Инвестиции</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Переводы</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Страхование</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Рефинансирование</a>
-        </li>
-        <li class="main-nav__item">
-          <a href="" class="main-nav__link">Сервисы</a>
-        </li>
-      </ul>
+      <div class="container">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Ипотека</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Кредиты</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Вклады</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Карты</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Инвестиции</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Переводы</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Страхование</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Рефинансирование</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="" class="main-nav__link">Сервисы</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-  </div>
-</header>
+
+  </header>
 
 
 
-<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
