Сверстал блок предложений

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 </head>
@@ -97,7 +98,96 @@
 
   </header>
 
+  <main class="main-content">
+    <section class="get-credit">
+      <div class="container">
+        <div class="get-credit__wrap">
+          <h1 class="get-credit__headline">
+            Кредит<br><span>на любые</span> цели
+          </h1>
 
+          <div class="get-credit__buttons">
+            <button class="button button--get">
+              Получить кредит
+            </button>
+            <button class="button">
+              Подробнее
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="best-offers">
+      <div class="container">
+        <h2 class="best-offers__headline">
+          Лучшие предложения в Рубльбанке
+        </h2>
+
+        <p class="best-offers__slogan">
+          Банковские продукты для комфортной жизни
+        </p>
+
+        <section class="best-offers__representation">
+          <ul class="best-offres__list">
+            <li class="best-offers__item best-offers__item--mortgage">
+              <div class="best-offers__wrap">
+                <a class="best-offers__link" href="">
+                  <h3>
+                    Ипотечное кредитование
+                  </h3>
+                </a>
+                <p>
+                  Программы гсподдержки<br>Выгодные условия
+                </p>
+              </div>
+            </li>
+            <li class="best-offers__item best-offers__item--piggy">
+              <div class="best-offers__wrap">
+                <a class="best-offers__link" href="">
+                  <h3>
+                    Накопительные счета
+                  </h3>
+                </a>
+                <p>
+                  Ставки от 7,5%<br>Снятие в любое время
+                </p>
+              </div>
+            </li>
+            <li class="best-offers__item best-offers__item--personal-cards">
+              <div class="best-offers__wrap">
+                <a class="best-offers__link" href="">
+                  <h3>
+                    Персональные карты
+                  </h3>
+                </a>
+                <p>
+                  Карта с эксклюзивным дизайном<br>для постоянных клиентов
+                </p>
+              </div>
+            </li>
+            <li class="best-offers__item best-offers__item--partner">
+              <div class="best-offers__wrap">
+                <a class="best-offers__link" href="">
+                  <h3>
+                    Партнерские программы
+                  </h3>
+                </a>
+                <p>
+                  Выгодные условия<br>для путешествий<br>и покупок
+                </p>
+              </div>
+            </li>
+          </ul>
+        </section>
+
+      </div>
+    </section>
+
+
+
+    </div>
+  </main>
 
   <script src="js/script.js"></script>
 </body>
