--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
             Кредит<br><span>на любые</span> цели
           </h1>
 
-          <div class="get-credit__buttons">
-            <button class="button button--get">
+          <div class="offer-buttons get-credit__buttons">
+            <a href="#" class="button button--get">
               Получить кредит
-            </button>
-            <button class="button">
+            </a>
+            <a href="#" class="button">
               Подробнее
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -185,8 +185,82 @@
     </section>
 
 
+    <section class="cards-offer">
+      <div class="container">
+        <section class="credit-card-offer cards-offer__credit">
+          <h2 class="credit-card-offer__headline">
+            Кредитная карта<br>60 дней<br>без процентов
+          </h2>
 
-    </div>
+          <table class="card-terms credit-card-offer__terms">
+            <tbody>
+              <tr class="card-terms__line">
+                <td class="card-terms__cell card-terms__term">
+                  500 000 ₽
+                </td>
+                <td class="card-terms__cell card-terms__term">
+                  от 12%
+                </td>
+                <td class="card-terms__cell card-terms__term">
+                  1 день
+                </td>
+              </tr>
+              <tr class="card-terms__line">
+                <th class="card-terms__cell card-terms__term-name">
+                  лимит<br>по карте
+                </th>
+                <th class="card-terms__cell card-terms__term-name">
+                  ставка<br>по карте
+                </th>
+                <th class="card-terms__cell card-terms__term-name">
+                  решение<br>по заявке
+                </th>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="offer-buttons get-credit__buttons">
+            <a href="#" class="button button--get">
+              Оформить карту
+            </a>
+            <a href="#" class="button">
+              Подробнее
+            </a>
+          </div>
+
+        </section>
+
+        <section class="cards-offer__options">
+          <section class="cards-offer__options-item">
+            <p class="cards-offer__headline">
+              Кредитные<br>карты
+            </p>
+            <a class="cards-offer__link" href="">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M10.1053 22.7368H30.9474L22.7368 14.5263L24.4143 12.6316L35.7827 24L24.4143 35.3684L22.7368 33.4737L30.9474 25.2632H10.1053V22.7368ZM48 24C48 27.1517 47.3792 30.2726 46.1731 33.1844C44.967 36.0962 43.1992 38.742 40.9706 40.9706C38.742 43.1992 36.0962 44.967 33.1844 46.1731C30.2726 47.3792 27.1517 48 24 48C20.8483 48 17.7274 47.3792 14.8156 46.1731C11.9038 44.967 9.25804 43.1992 7.02944 40.9706C4.80083 38.742 3.033 36.0962 1.82689 33.1844C0.620778 30.2726 -4.69644e-08 27.1517 0 24C9.48488e-08 17.6348 2.52856 11.5303 7.02944 7.02944C11.5303 2.52856 17.6348 0 24 0C30.3652 0 36.4697 2.52856 40.9706 7.02944C45.4714 11.5303 48 17.6348 48 24ZM45.4737 24C45.4737 18.3048 43.2113 12.8429 39.1842 8.81581C35.1571 4.78871 29.6952 2.52631 24 2.52631C18.3048 2.52631 12.8429 4.78871 8.81581 8.81581C4.78871 12.8429 2.52632 18.3048 2.52632 24C2.52632 29.6952 4.78871 35.1571 8.81581 39.1842C12.8429 43.2113 18.3048 45.4737 24 45.4737C29.6952 45.4737 35.1571 43.2113 39.1842 39.1842C43.2113 35.1571 45.4737 29.6952 45.4737 24Z"
+                  fill="#3A95FF" />
+              </svg>
+            </a>
+          </section>
+          <section class="cards-offer__options-item">
+            <p class="cards-offer__headline">
+              Дебетовые<br>карты
+            </p>
+            <a class="cards-offer__link" href="">
+              <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M10.1053 22.7368H30.9474L22.7368 14.5263L24.4143 12.6316L35.7827 24L24.4143 35.3684L22.7368 33.4737L30.9474 25.2632H10.1053V22.7368ZM48 24C48 27.1517 47.3792 30.2726 46.1731 33.1844C44.967 36.0962 43.1992 38.742 40.9706 40.9706C38.742 43.1992 36.0962 44.967 33.1844 46.1731C30.2726 47.3792 27.1517 48 24 48C20.8483 48 17.7274 47.3792 14.8156 46.1731C11.9038 44.967 9.25804 43.1992 7.02944 40.9706C4.80083 38.742 3.033 36.0962 1.82689 33.1844C0.620778 30.2726 -4.69644e-08 27.1517 0 24C9.48488e-08 17.6348 2.52856 11.5303 7.02944 7.02944C11.5303 2.52856 17.6348 0 24 0C30.3652 0 36.4697 2.52856 40.9706 7.02944C45.4714 11.5303 48 17.6348 48 24ZM45.4737 24C45.4737 18.3048 43.2113 12.8429 39.1842 8.81581C35.1571 4.78871 29.6952 2.52631 24 2.52631C18.3048 2.52631 12.8429 4.78871 8.81581 8.81581C4.78871 12.8429 2.52632 18.3048 2.52632 24C2.52632 29.6952 4.78871 35.1571 8.81581 39.1842C12.8429 43.2113 18.3048 45.4737 24 45.4737C29.6952 45.4737 35.1571 43.2113 39.1842 39.1842C43.2113 35.1571 45.4737 29.6952 45.4737 24Z"
+                  fill="#3A95FF" />
+              </svg>
+            </a>
+          </section>
+        </section>
+      </div>
+    </section>
+
+
+
   </main>
 
   <script src="js/script.js"></script>
