--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 </head>
@@ -327,6 +328,45 @@
     </section>
 
   </main>
+
+  <footer class="main-footer">
+    <div class="container">
+      <div class="main-footer__wrap--one">
+        <p class="main-footer__copyright">
+          © 2001-2020 Рубльбанк
+        </p>
+        <span class="main-footer__licence">
+          Генеральная лицензия на осуществление банковских операций от 11 августа 2015 года. Регистрационный номер -
+          1234.
+        </span>
+      </div>
+      <div class="main-footer__wrap--two">
+        <a class="main-footer__feedback-link" href="">
+          Обратная связь
+        </a>
+        <span class="main-footer__arddress">
+          Россия,<br>Москва, 113337, ул. Советская, д. 42
+        </span>
+      </div>
+      <nav class="main-footer__links">
+        <ul class="main-footer-list">
+          <li class="main-footer__item">
+            <a href="">
+              Информация о процентных ставках по договорам банковского вклада с физическими лицами
+            </a>
+          </li>
+          <li class="main-footer__item">
+            <a href="">
+              Информация, обязательная к размещению
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+    </div>
+
+
+  </footer>
 
   <script src="js/script.js"></script>
 </body>
