Добавил ситили для состояний

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="main-header__top-nav">
 
         <div class="main-header__logo">
-          <a href="index.html">Рубльбанк</a>
+          <a class="main-header__logo-link" href="index.html">Рубльбанк</a>
         </div>
 
         <nav class="secondary-nav main-header__secondary-nav">
@@ -76,7 +76,7 @@
             <a href="" class="main-nav__link">Вклады</a>
           </li>
           <li class="main-nav__item">
-            <a href="cards.html" class="main-nav__link">Карты</a>
+            <a href="#cards" class="main-nav__link">Карты</a>
           </li>
           <li class="main-nav__item">
             <a href="" class="main-nav__link">Инвестиции</a>
@@ -186,7 +186,7 @@
     </section>
 
 
-    <section class="cards-offer">
+    <section id="cards" class="cards-offer">
       <div class="container">
         <section class="credit-card-offer cards-offer__credit">
           <h2 class="credit-card-offer__headline">
@@ -231,7 +231,7 @@
 
         </section>
 
-        <section class="cards-offer__options">
+        <section  class="cards-offer__options">
           <section class="cards-offer__options-item">
             <p class="cards-offer__headline">
               Кредитные<br>карты
