--- a/debet-cards.html
+++ b/debet-cards.html
@@ -25,7 +25,7 @@
       <section class="main-header__top-nav">
 
         <div class="main-header__logo">
-          <a href="index.html">Рубльбанк</a>
+          <a class="main-header__logo-link" href="index.html">Рубльбанк</a>
         </div>
 
         <nav class="secondary-nav main-header__secondary-nav">
