Добавил ссылку на тех.страницу

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         <nav class="secondary-nav main-header__secondary-nav">
           <ul class="secondary-nav__list secondary-nav__list--left">
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link">
                 Частным клиентам
               </a>
             </li>
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link">
                 Бизнесу
               </a>
             </li>
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link">
                 Самозанятым
               </a>
             </li>
@@ -48,12 +48,12 @@
 
           <ul class="secondary-nav__list secondary-nav__list--right">
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link">
                 Отделения и банкоматы
               </a>
             </li>
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link rublebank-link">
+              <a href="wrong-page.html" class="secondary-nav__link rublebank-link">
                 Рубльбанк онлайн
               </a>
             </li>
@@ -67,31 +67,31 @@
       <div class="container">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Ипотека</a>
+            <a href="wrong-page.html" class="main-nav__link">Ипотека</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Кредиты</a>
+            <a href="wrong-page.html" class="main-nav__link">Кредиты</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Вклады</a>
+            <a href="wrong-page.html" class="main-nav__link">Вклады</a>
           </li>
           <li class="main-nav__item">
             <a href="#cards" class="main-nav__link">Карты</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Инвестиции</a>
+            <a href="wrong-page.html" class="main-nav__link">Инвестиции</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Переводы</a>
+            <a href="wrong-page.html" class="main-nav__link">Переводы</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Страхование</a>
+            <a href="wrong-page.html" class="main-nav__link">Страхование</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Рефинансирование</a>
+            <a href="wrong-page.html" class="main-nav__link">Рефинансирование</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Сервисы</a>
+            <a href="wrong-page.html" class="main-nav__link">Сервисы</a>
           </li>
         </ul>
       </div>
@@ -108,10 +108,10 @@
           </h1>
 
           <div class="offer-buttons get-credit__buttons">
-            <a href="#" class="button button--get">
+            <a href="wrong-page.html" class="button button--get">
               Получить кредит
             </a>
-            <a href="#" class="button">
+            <a href="wrong-page.html" class="button">
               Подробнее
             </a>
           </div>
@@ -133,7 +133,7 @@
           <ul class="best-offres__list">
             <li class="best-offers__item best-offers__item--mortgage">
               <div class="best-offers__wrap">
-                <a class="best-offers__link" href="">
+                <a class="best-offers__link" href="wrong-page.html">
                   <h3>
                     Ипотечное кредитование
                   </h3>
@@ -145,7 +145,7 @@
             </li>
             <li class="best-offers__item best-offers__item--piggy">
               <div class="best-offers__wrap">
-                <a class="best-offers__link" href="">
+                <a class="best-offers__link" href="wrong-page.html">
                   <h3>
                     Накопительные счета
                   </h3>
@@ -157,7 +157,7 @@
             </li>
             <li class="best-offers__item best-offers__item--personal-cards">
               <div class="best-offers__wrap">
-                <a class="best-offers__link" href="">
+                <a class="best-offers__link" href="wrong-page.html">
                   <h3>
                     Персональные карты
                   </h3>
@@ -169,7 +169,7 @@
             </li>
             <li class="best-offers__item best-offers__item--partner">
               <div class="best-offers__wrap">
-                <a class="best-offers__link" href="">
+                <a class="best-offers__link" href="wrong-page.html">
                   <h3>
                     Партнерские программы
                   </h3>
@@ -221,10 +221,10 @@
           </table>
 
           <div class="offer-buttons get-credit__buttons">
-            <a href="#" class="button button--get">
+            <a href="wrong-page.html" class="button button--get">
               Оформить карту
             </a>
-            <a href="#" class="button">
+            <a href="wrong-page.html" class="button">
               Подробнее
             </a>
           </div>
@@ -236,7 +236,7 @@
             <p class="cards-offer__headline">
               Кредитные<br>карты
             </p>
-            <a class="cards-offer__link" href="">
+            <a class="cards-offer__link" href="wrong-page.html">
               <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M10.1053 22.7368H30.9474L22.7368 14.5263L24.4143 12.6316L35.7827 24L24.4143 35.3684L22.7368 33.4737L30.9474 25.2632H10.1053V22.7368ZM48 24C48 27.1517 47.3792 30.2726 46.1731 33.1844C44.967 36.0962 43.1992 38.742 40.9706 40.9706C38.742 43.1992 36.0962 44.967 33.1844 46.1731C30.2726 47.3792 27.1517 48 24 48C20.8483 48 17.7274 47.3792 14.8156 46.1731C11.9038 44.967 9.25804 43.1992 7.02944 40.9706C4.80083 38.742 3.033 36.0962 1.82689 33.1844C0.620778 30.2726 -4.69644e-08 27.1517 0 24C9.48488e-08 17.6348 2.52856 11.5303 7.02944 7.02944C11.5303 2.52856 17.6348 0 24 0C30.3652 0 36.4697 2.52856 40.9706 7.02944C45.4714 11.5303 48 17.6348 48 24ZM45.4737 24C45.4737 18.3048 43.2113 12.8429 39.1842 8.81581C35.1571 4.78871 29.6952 2.52631 24 2.52631C18.3048 2.52631 12.8429 4.78871 8.81581 8.81581C4.78871 12.8429 2.52632 18.3048 2.52632 24C2.52632 29.6952 4.78871 35.1571 8.81581 39.1842C12.8429 43.2113 18.3048 45.4737 24 45.4737C29.6952 45.4737 35.1571 43.2113 39.1842 39.1842C43.2113 35.1571 45.4737 29.6952 45.4737 24Z"
@@ -341,7 +341,7 @@
         </span>
       </div>
       <div class="main-footer__wrap--two">
-        <a class="main-footer__feedback-link" href="">
+        <a class="main-footer__feedback-link" href="wrong-page.html">
           Обратная связь
         </a>
         <span class="main-footer__arddress">
@@ -351,12 +351,12 @@
       <nav class="main-footer__links">
         <ul class="main-footer-list">
           <li class="main-footer__item">
-            <a href="">
+            <a href="wrong-page.html">
               Информация о процентных ставках по договорам банковского вклада с физическими лицами
             </a>
           </li>
           <li class="main-footer__item">
-            <a href="">
+            <a href="wrong-page.html">
               Информация, обязательная к размещению
             </a>
           </li>
