Добавил ссылки на тех.страницу

--- a/debet-cards.html
+++ b/debet-cards.html
@@ -19,7 +19,6 @@
 
 <body>
 
-
   <header class="main-header">
     <div class="container">
       <section class="main-header__top-nav">
@@ -31,17 +30,17 @@
         <nav class="secondary-nav main-header__secondary-nav">
           <ul class="secondary-nav__list secondary-nav__list--left">
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link">
                 Частным клиентам
               </a>
             </li>
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link">
                 Бизнесу
               </a>
             </li>
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link">
                 Самозанятым
               </a>
             </li>
@@ -49,12 +48,12 @@
 
           <ul class="secondary-nav__list secondary-nav__list--right">
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link">
                 Отделения и банкоматы
               </a>
             </li>
             <li class="secondary-nav__item">
-              <a href="#" class="secondary-nav__link rublebank-link">
+              <a href="wrong-page.html" class="secondary-nav__link rublebank-link">
                 Рубльбанк онлайн
               </a>
             </li>
@@ -68,31 +67,31 @@
       <div class="container">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Ипотека</a>
+            <a href="wrong-page.html" class="main-nav__link">Ипотека</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Кредиты</a>
+            <a href="wrong-page.html" class="main-nav__link">Кредиты</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Вклады</a>
+            <a href="wrong-page.html" class="main-nav__link">Вклады</a>
           </li>
           <li class="main-nav__item">
-            <a href="cards.html" class="main-nav__link">Карты</a>
+            <a href="#" class="main-nav__link">Карты</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Инвестиции</a>
+            <a href="wrong-page.html" class="main-nav__link">Инвестиции</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Переводы</a>
+            <a href="wrong-page.html" class="main-nav__link">Переводы</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Страхование</a>
+            <a href="wrong-page.html" class="main-nav__link">Страхование</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Рефинансирование</a>
+            <a href="wrong-page.html" class="main-nav__link">Рефинансирование</a>
           </li>
           <li class="main-nav__item">
-            <a href="" class="main-nav__link">Сервисы</a>
+            <a href="wrong-page.html" class="main-nav__link">Сервисы</a>
           </li>
         </ul>
       </div>
@@ -197,7 +196,7 @@
         </span>
       </div>
       <div class="main-footer__wrap--two">
-        <a class="main-footer__feedback-link" href="">
+        <a class="main-footer__feedback-link" href="wrong-page.html">
           Обратная связь
         </a>
         <span class="main-footer__arddress">
@@ -207,12 +206,12 @@
       <nav class="main-footer__links">
         <ul class="main-footer-list">
           <li class="main-footer__item">
-            <a href="">
+            <a href="wrong-page.html">
               Информация о процентных ставках по договорам банковского вклада с физическими лицами
             </a>
           </li>
           <li class="main-footer__item">
-            <a href="">
+            <a href="wrong-page.html">
               Информация, обязательная к размещению
             </a>
           </li>
@@ -221,6 +220,7 @@
 
     </div>
   </footer>
+
 
 
   <script src="js/script.js"></script>
