--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
           </h1>
 
           <div class="offer-buttons get-credit__buttons">
-            <a href="wrong-page.html" class="button button--get">
+            <a href="#" class="button button--get">
               Получить кредит
             </a>
-            <a href="wrong-page.html" class="button">
+            <a href="#" class="button">
               Подробнее
             </a>
           </div>
