--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <ul class="secondary-nav__list secondary-nav__list--right">
             <li class="secondary-nav__item">
-              <a href="wrong-page.html" class="secondary-nav__link">
+              <a href="wrong-page.html" class="secondary-nav__link secondary-nav__link--bankomats">
                 Отделения и банкоматы
               </a>
             </li>
