--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
   <footer class="main-footer">
     <div class="container">
-      <div class="main-footer__wrap--one">
+      <div class="main-footer__wrap--first-coloumn">
         <p class="main-footer__copyright">
           © 2001-2020 Рубльбанк
         </p>
@@ -340,7 +340,7 @@
           1234.
         </span>
       </div>
-      <div class="main-footer__wrap--two">
+      <div class="main-footer__wrap--second-coloumn">
         <a class="main-footer__feedback-link" href="wrong-page.html">
           Обратная связь
         </a>
