--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <title>РубльБанк</title>
 
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/main.css">
@@ -104,7 +105,8 @@
       <div class="container">
         <div class="get-credit__wrap">
           <h1 class="get-credit__headline">
-            Кредит<br><span>на любые</span> цели
+            Кредит<br>
+            <span>на любые</span> цели
           </h1>
 
           <div class="offer-buttons get-credit__buttons">
