Скомпоновал и поправил стили

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </a>
             </li>
             <li class="secondary-nav__item">
-              <a href="wrong-page.html" class="secondary-nav__link rublebank-link">
+              <a href="wrong-page.html" class="secondary-nav__link secondary-nav__link--rublebank">
                 Рубльбанк онлайн
               </a>
             </li>
