--- a/debet-cards.html
+++ b/debet-cards.html
@@ -186,7 +186,7 @@
 
   <footer class="main-footer">
     <div class="container">
-      <div class="main-footer__wrap--one">
+      <div class="main-footer__wrap--first-coloumn">
         <p class="main-footer__copyright">
           © 2001-2020 Рубльбанк
         </p>
@@ -195,7 +195,7 @@
           1234.
         </span>
       </div>
-      <div class="main-footer__wrap--two">
+      <div class="main-footer__wrap--second-coloumn">
         <a class="main-footer__feedback-link" href="wrong-page.html">
           Обратная связь
         </a>
@@ -220,7 +220,6 @@
 
     </div>
   </footer>
-
 
 
   <script src="js/script.js"></script>
